<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deleteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="remove card"
            android:textSize="16dp"
            android:padding="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete"
            android:textSize="13dp"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_gray6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/no"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15dp"
                android:padding="15dp"
                android:textColor="@color/text_black"
                android:orientation="horizontal"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/text_gray6"/>

            <TextView
                android:id="@+id/yes"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="15dp"
                android:padding="15dp"
                android:textColor="@color/red"
                android:orientation="horizontal"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>