<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/resultImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_success"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textColor="@color/green"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/thankyou"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:id="@+id/detailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_successfull"
            android:textSize="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="10dp"/>
            <TextView
                android:id="@+id/paymentAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.000 KD paid"
                android:textSize="17dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/green"
                android:gravity="center"
                android:padding="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_gray6"/>
        <TextView
            android:id="@+id/ok"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="15dp"
            android:padding="15dp"
            android:textColor="@color/text_black"
            android:orientation="horizontal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>