<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/item_bg"
    android:orientation="vertical"
    android:id="@+id/layoutCardInfo"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutCardInfoShort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cardImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/card_master" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:text="@string/debit_creditcard"
                android:textColor="@color/text_gray2"
                android:textSize="15dp" />

<!--            <TextView-->
<!--                android:id="@+id/amount"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:maxLines="1"-->
<!--                android:text="Amount"-->
<!--                android:textColor="@color/green"-->
<!--                android:textSize="10dp" />-->


        </androidx.appcompat.widget.LinearLayoutCompat>
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layoutDirection="ltr"
            android:padding="17dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutCardDetail"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:padding="10dp"
                android:background="@drawable/layout_border"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/id"/>
                <EditText
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="32"
                    android:background="@null"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/text_gray1"
                    android:hint="@string/name_card"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/cardNameErrorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/red"
                    android:textSize="12dp"
                    android:text=""/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:padding="10dp"
                android:background="@drawable/layout_border"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="1dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/creditcard"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_weight="1"
                    android:id="@+id/cardNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="23"
                    android:background="@null"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/text_gray1"
                    android:inputType="number"
                    android:hint="@string/card_number"/>
                <ImageView
                    android:id="@+id/cardIndicatorImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/cardNumberErrorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/red"
                    android:textSize="12dp"
                    android:text=""/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/layout_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:padding="1dp"
                        android:src="@drawable/calender"/>
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/datetextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:maxLength="5"
                        android:background="@null"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/text_gray1"
                        android:inputType="number"
                        android:hint="@string/date_hint"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_marginRight="0dp"
                    android:layout_weight="1.3"
                    android:padding="10dp"
                    android:background="@drawable/layout_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:padding="1dp"
                        android:src="@drawable/creditcard"/>
                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/cvvTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:maxLength="4"
                        android:background="@null"
                        android:textSize="15sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/text_gray1"
                        android:inputType="number"
                        android:hint="@string/cvv"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
<!--                <androidx.appcompat.widget.AppCompatImageView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_marginLeft="10dp"/>-->
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/expiredateErrorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/red"
                    android:textSize="12dp"
                    android:text=""/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/saveCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/click_save_card"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/infoImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_baseline_error_24"
                android:tint="@color/black"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>